my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EFUNSTRUCT/EFUNSTRUCT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EFUNSTRUCT.dml:9:7: In init
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EFUNSTRUCT.dml:11:20: error EFUNSTRUCT: struct member is a function
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_EFUNSTRUCT.dml:13:36: error EFUNSTRUCT: struct member is a function
